--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -8,6 +8,7 @@
       <th>Title</th>
       <th>Content</th>
       <th>Publish date</th>
+      <th>Isbn</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,6 +19,7 @@
         <td><%= book.title %></td>
         <td><%= book.content %></td>
         <td><%= book.publish_date %></td>
+        <td><%= book.isbn %></td>
         <td><%= link_to 'Show', book %></td>
         <td><%= link_to 'Edit', edit_book_path(book) %></td>
         <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
