--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -29,6 +29,11 @@
     <%= form.text_field :isbn %>
   </div>
 
+  <div class="field">
+    <%= form.label :cover %>
+    <%= form.file_field :cover %>
+  </div>
+  
   <div class="actions">
     <%= form.submit %>
   </div>
