--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,5 +20,10 @@
   <%= @book.isbn %>
 </p>
 
+<p>
+  <strong>Cover:</strong>
+  <%= image_tag(@book.cover_url) if @book.cover? %>
+</p>
+
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
